checks site backups

--- a/options/options.html
+++ b/options/options.html
@@ -36,6 +36,38 @@
         <label for="hgOff">Off</label>
     </div>
     <div class="browser-style title-option">
+        .zip
+        <input type="radio" id="zipOn" name="zip" value="on"/>
+        <label for="zipOn">On</label>
+
+        <input type="radio" id="zipOff" name="zip" value="off" checked/>
+        <label for="zipOff">Off</label>
+    </div>
+    <div class="browser-style title-option">
+        .rar
+        <input type="radio" id="rarOn" name="rar" value="on"/>
+        <label for="rarOn">On</label>
+
+        <input type="radio" id="rarOff" name="rar" value="off" checked/>
+        <label for="rarOff">Off</label>
+    </div>
+    <div class="browser-style title-option">
+        .tar
+        <input type="radio" id="tarOn" name="tar" value="on"/>
+        <label for="tarOn">On</label>
+
+        <input type="radio" id="tarOff" name="tar" value="off" checked/>
+        <label for="tarOff">Off</label>
+    </div>
+    <div class="browser-style title-option">
+        .tar.gz
+        <input type="radio" id="targzOn" name="targz" value="on"/>
+        <label for="targzOn">On</label>
+
+        <input type="radio" id="zipOff" name="targz" value="off" checked/>
+        <label for="targzOff">Off</label>
+    </div>
+    <div class="browser-style title-option">
         .env
         <input type="radio" id="envOn" name="env" value="on"/>
         <label for="envOn">On</label>
