--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <base target="_blank">
 </head>
 <body>
-<h2>DotGit</h2>
+<h2>DotRip</h2>
 <ul>
     <li>
         <a href="https://github.com/davtur19/DotGit">Source code (GitHub)</a>
