--- a/options/options.html
+++ b/options/options.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DotGit Options</title>
+    <title>DotRip Options</title>
     <meta charset="utf-8"/>
     <link rel="stylesheet" type="text/css" href="options.css">
     <script src="options.js"></script>
