--- a/options/options.html
+++ b/options/options.html
@@ -64,7 +64,7 @@
         <input type="radio" id="targzOn" name="targz" value="on"/>
         <label for="targzOn">On</label>
 
-        <input type="radio" id="zipOff" name="targz" value="off" checked/>
+        <input type="radio" id="targzOff" name="targz" value="off" checked/>
         <label for="targzOff">Off</label>
     </div>
     <div class="browser-style title-option">
