changed name to be consistant

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>DotRip</title>
+    <title>DotDrip</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../lib/materialize.min.css"/>
@@ -13,7 +13,7 @@
 <body class="darken-3 custom-color">
 <nav>
     <div class="nav-wrapper darken-3 custom-color">
-        <a class="left brand-logo">DotRip</a>
+        <a class="left brand-logo">DotDrip</a>
         <ul class="right">
             <li><a><i class="material-icons" title="About" id="about">info</i></a></li>
             <li><a><i class="material-icons" title="Settings" id="options">settings</i></a></li>
